[gd_scene load_steps=3 format=3 uid="uid://b7jxdpspmrngo"]

[ext_resource type="Script" uid="uid://comg8eg4ff1fb" path="res://editor/suntome_s_pic_content.gd" id="1_ffq7i"]
[ext_resource type="Theme" uid="uid://1adxjbws8hdd" path="res://editor/editor_theme.tres" id="2_tyx7t"]

[node name="SelectPicContent" type="VBoxContainer"]
script = ExtResource("1_ffq7i")

[node name="Container2" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_tyx7t")

[node name="VBoxContainer" type="VBoxContainer" parent="Container2"]
layout_mode = 2

[node name="texture" type="TextureRect" parent="Container2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="texture_path" type="Label" parent="Container2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 1)
layout_mode = 2
text = "texture path info"
horizontal_alignment = 1
autowrap_mode = 3

[node name="panelcontainer" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_tyx7t")

[node name="sound_path" type="Label" parent="panelcontainer"]
unique_name_in_owner = true
layout_mode = 2
text = "no sound object"
horizontal_alignment = 1
vertical_alignment = 1
